--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,7 +9,7 @@
     <nav style="font-size: 20px; background-color: rgb(127, 251, 255);"
         class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Codieal</a>
+            <a class="navbar-brand" href="/">TaskTrack</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -26,27 +26,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/users/sign-in">Sign In</a>
                     </li>
-                    <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li> -->
-
                 </ul>
-                <form style="border: none;" class="d-flex mt-2" role="search">
+                <!-- <form style="border: none;" class="d-flex mt-2" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success mt-1" type="submit"
                         style="align-items: center; display: flex;">Search</button>
-                </form>
+                </form> -->
             </div>
         </div>
     </nav>
